Responsive admin product pages, fixed iPhone SE isssues and added visible input to products

--- a/app/assets/stylesheets/components/_product-card.scss
+++ b/app/assets/stylesheets/components/_product-card.scss
@@ -3,6 +3,9 @@
   border: 1px solid #CAD0D9;
   p {
     font-size: 13px;
+    @media(max-width: 350px) {
+      font-size: 12px;
+    }
   }
 }
 
@@ -39,6 +42,9 @@
   display: flex;
   justify-content: space-between;
   padding: 16px;
+  @media(max-width: 350px) {
+    padding: 8px;
+  }
 }
 
 .product-info-divider {
